kubernetes/imti-geth/000-geth-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: geth
#Optional can also be done with kubectl create namespace geth
