kubernetes/imti-geth/300-etherstats-service.yml
apiVersion: v1
kind: Service
metadata:
  name: eth-ethstats
  namespace: geth
  labels:
    app: eth-ethstats
spec:
  selector:
    app: eth-ethstats
  type: ClusterIP
  clusterIP: 10.152.183.131
  ports:
  - port: 3000
    targetPort: http
