kubernetes/imti-geth/400-geth-sealer-ss.yml
apiVersion: v1
kind: Service
metadata:
  # hangileri statefulsetler ile eslestrilmekte kullaniliyor ?
  name: geth
  namespace: geth
  labels:
    app: geth
spec:
  ports:
  - port: 8545
    name: rpc
  clusterIP: None
  selector:
    app: geth
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: geth
  namespace: geth
spec:
  serviceName: "geth"
  replicas: 1 # by default is 1
  selector:
    matchLabels:
      app: geth # has to match .spec.template.metadata.labels
  template:
    metadata:
      labels:
        app: geth # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: geth
        image: ethereum/client-go
        ports:
        - containerPort: 8545
        args: ["--dev", "--http", "--http.addr", "0.0.0.0", "--http.api", "eth,net,web3,admin", "--http.corsdomain", "*"]
        
      volumes: # en dandik volume nasil yonetiliyor bilmiyorum belki ama persisten olmaya bilir yoksa niye persistent volume diye
      # birsey olsun ?
        - name: vol
          hostPath:
            path: /root/.ethereum
