kubernetes/imti-geth/420-geth-sealer-ss.yml
apiVersion: v1
kind: Service
metadata:
  # hangileri statefulsetler ile eslestrilmekte kullaniliyor ?
  name: geth
  namespace: geth
  labels:
    app: geth
spec:
  ports:
  - port: 8545
    name: node1
  - port: 8546
    name: node2
  - port: 8547
    name: node3
  clusterIP: 10.152.183.132

  selector:
    app: geth
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: geth
  namespace: geth
spec:
  serviceName: "geth"
  replicas: 1 # by default is 1
  selector:
    matchLabels:
      app: geth # has to match .spec.template.metadata.labels
  template:
    metadata:
      labels:
        app: geth # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: geth-node1
        image: ethereum/client-go
        ports:
        - containerPort: 8545
        - name: discovery-udp
          containerPort: 30311
          protocol: UDP
        - name: discovery-tcp
          containerPort: 30311

        args: [
          "--bootnodes", "enode://6cef1af52300884160efe3c7a92080055a95ccad266e28d0e53c64b048f7578d25107e7dd91f5299a4016d6afc6a9ffcfa3a4681d2bbbe064e03f6cbc969cabc@127.0.0.1:30311,enode://f1bc4cd704bacb6524718998c4c500d24168d31b5a6dddf6c896d77f266b48313bd1c01ef94916bf3b1dd6ff9579e2e2fe6804cb3ccfd3b14591e3c92ee20d9b@127.0.0.1:30312,enode://d0d3c4f361eebb6385949da2fb3d9c100eb17d72d64c8a8313db418681281dbcfd499fbabba6710d530c227e63a621981be6b2822898658774e5944c4c5f7c3f@127.0.0.1:30313",
          "--datadir", "/root/.ethereum/node1",
          "--syncmode", "full", 
          "--port", "30311",
          "--http", 
          "--http.addr", "0.0.0.0", "--http.port", "8545",
          "--http.vhosts", "*", 
          "--http.api", "admin,eth,miner,net,txpool,personal,web3,clique", 
          "--http.corsdomain", "*", 
          "--networkid", "$(NETWORK_ID)", 
          "--ethstats=$(HOSTNAME):$(ETHSTATS_SECRET)@$(ETHSTATS_SVC)", 
          "--allow-insecure-unlock",
          "--unlock", "0xBC1C09acefbc15A0D325584c7A704fa310907E67", 
          "--password", "/root/.ethereum/pswd/password.txt",
          "--miner.gasprice", "0", "--miner.etherbase", "0xBC1C09acefbc15A0D325584c7A704fa310907E67",
          "--mine" #,
          #"--verbosity=6"
          ]
          
        volumeMounts:
          - mountPath: /root/.ethereum
            name: data2
          - name: config-genesis
            mountPath: /root/.ethereum/pswd/password.txt
            subPath: password.txt
          - name: config-genesis
            mountPath: /root/.ethereum/node1/keystore/UTC--2021-09-09T10-55-14.594491679Z--bc1c09acefbc15a0d325584c7a704fa310907e67
            subPath: UTC--2021-09-09T10-55-14.594491679Z--bc1c09acefbc15a0d325584c7a704fa310907e67
          - name: config-genesis
            mountPath: /root/.ethereum/node1/keystore/UTC--2021-09-09T10-55-30.324205181Z--ab412db6f0733decc8e23ee97e6dc569422a0490
            subPath: UTC--2021-09-09T10-55-30.324205181Z--ab412db6f0733decc8e23ee97e6dc569422a0490
          - name: config-genesis
            mountPath: /root/.ethereum/node1/keystore/UTC--2021-09-09T10-55-43.621998835Z--8e24c067e098c2dadf28aec75a551257d2c9316f
            subPath: UTC--2021-09-09T10-55-43.621998835Z--8e24c067e098c2dadf28aec75a551257d2c9316f
          
            

      - name: geth-node2
        image: ethereum/client-go
        ports:
        - containerPort: 8546
        - name: discovery-udp
          containerPort: 30312
          protocol: UDP
        - name: discovery-tcp
          containerPort: 30312

        args: [
          "--bootnodes", "enode://6cef1af52300884160efe3c7a92080055a95ccad266e28d0e53c64b048f7578d25107e7dd91f5299a4016d6afc6a9ffcfa3a4681d2bbbe064e03f6cbc969cabc@127.0.0.1:30311,enode://f1bc4cd704bacb6524718998c4c500d24168d31b5a6dddf6c896d77f266b48313bd1c01ef94916bf3b1dd6ff9579e2e2fe6804cb3ccfd3b14591e3c92ee20d9b@127.0.0.1:30312,enode://d0d3c4f361eebb6385949da2fb3d9c100eb17d72d64c8a8313db418681281dbcfd499fbabba6710d530c227e63a621981be6b2822898658774e5944c4c5f7c3f@127.0.0.1:30313",
          "--datadir", "/root/.ethereum/node2",
          "--syncmode", "full", 
          "--port", "30312",
          "--http", 
          "--http.addr", "0.0.0.0", "--http.port", "8546",
          "--http.vhosts", "*", 
          "--http.api", "admin,eth,miner,net,txpool,personal,web3,clique", 
          "--http.corsdomain", "*", 
          "--networkid", "$(NETWORK_ID)", 
          "--ethstats=$(HOSTNAME):$(ETHSTATS_SECRET)@$(ETHSTATS_SVC)", 
          "--allow-insecure-unlock",
          "--unlock", "0xAb412dB6F0733dECC8e23ee97E6dC569422a0490", 
          "--password", "/root/.ethereum/pswd/password.txt",
          "--miner.gasprice", "0", "--miner.etherbase", "0xAb412dB6F0733dECC8e23ee97E6dC569422a0490",
          "--mine" #,
          #"--verbosity=6"
          ]
          
        volumeMounts:
          - mountPath: /root/.ethereum
            name: data2
          - name: config-genesis
            mountPath: /root/.ethereum/pswd/password.txt
            subPath: password.txt
          - name: config-genesis
            mountPath: /root/.ethereum/node2/keystore/UTC--2021-09-09T10-55-14.594491679Z--bc1c09acefbc15a0d325584c7a704fa310907e67
            subPath: UTC--2021-09-09T10-55-14.594491679Z--bc1c09acefbc15a0d325584c7a704fa310907e67
          - name: config-genesis
            mountPath: /root/.ethereum/node2/keystore/UTC--2021-09-09T10-55-30.324205181Z--ab412db6f0733decc8e23ee97e6dc569422a0490
            subPath: UTC--2021-09-09T10-55-30.324205181Z--ab412db6f0733decc8e23ee97e6dc569422a0490
          - name: config-genesis
            mountPath: /root/.ethereum/node2/keystore/UTC--2021-09-09T10-55-43.621998835Z--8e24c067e098c2dadf28aec75a551257d2c9316f
            subPath: UTC--2021-09-09T10-55-43.621998835Z--8e24c067e098c2dadf28aec75a551257d2c9316f

      - name: geth-node3
        image: ethereum/client-go
        ports:
        - containerPort: 8547
        - name: discovery-udp
          containerPort: 30313
          protocol: UDP
        - name: discovery-tcp
          containerPort: 30313

        args: [
          "--bootnodes", "enode://6cef1af52300884160efe3c7a92080055a95ccad266e28d0e53c64b048f7578d25107e7dd91f5299a4016d6afc6a9ffcfa3a4681d2bbbe064e03f6cbc969cabc@127.0.0.1:30311,enode://f1bc4cd704bacb6524718998c4c500d24168d31b5a6dddf6c896d77f266b48313bd1c01ef94916bf3b1dd6ff9579e2e2fe6804cb3ccfd3b14591e3c92ee20d9b@127.0.0.1:30312,enode://d0d3c4f361eebb6385949da2fb3d9c100eb17d72d64c8a8313db418681281dbcfd499fbabba6710d530c227e63a621981be6b2822898658774e5944c4c5f7c3f@127.0.0.1:30313",
          "--datadir", "/root/.ethereum/node3",
          "--syncmode", "full",
          "--port", "30313",
          "--http", 
          "--http.addr", "0.0.0.0", "--http.port", "8547",
          "--http.vhosts", "*", 
          "--http.api", "admin,eth,miner,net,txpool,personal,web3,clique", 
          "--http.corsdomain", "*", 
          "--networkid", "$(NETWORK_ID)", 
          "--ethstats=$(HOSTNAME):$(ETHSTATS_SECRET)@$(ETHSTATS_SVC)", 
          "--allow-insecure-unlock",
          "--unlock", "0x8E24c067e098c2DaDF28aec75A551257d2C9316f", 
          "--password", "/root/.ethereum/pswd/password.txt",
          "--miner.gasprice", "0", "--miner.etherbase", "0x8E24c067e098c2DaDF28aec75A551257d2C9316f",
          "--mine" #,
          #"--verbosity=6"
          ]
          
        volumeMounts:
          - mountPath: /root/.ethereum
            name: data2
          - name: config-genesis
            mountPath: /root/.ethereum/pswd/password.txt
            subPath: password.txt
          - name: config-genesis
            mountPath: /root/.ethereum/node3/keystore/UTC--2021-09-09T10-55-14.594491679Z--bc1c09acefbc15a0d325584c7a704fa310907e67
            subPath: UTC--2021-09-09T10-55-14.594491679Z--bc1c09acefbc15a0d325584c7a704fa310907e67
          - name: config-genesis
            mountPath: /root/.ethereum/node3/keystore/UTC--2021-09-09T10-55-30.324205181Z--ab412db6f0733decc8e23ee97e6dc569422a0490
            subPath: UTC--2021-09-09T10-55-30.324205181Z--ab412db6f0733decc8e23ee97e6dc569422a0490
          - name: config-genesis
            mountPath: /root/.ethereum/node3/keystore/UTC--2021-09-09T10-55-43.621998835Z--8e24c067e098c2dadf28aec75a551257d2c9316f
            subPath: UTC--2021-09-09T10-55-43.621998835Z--8e24c067e098c2dadf28aec75a551257d2c9316f

          

      volumes: 
        - name: config
          hostPath:
            path: /root/.ethereum
        - name: config-genesis
          configMap:
            name: eth-geth
        - emptyDir: {}
          name: data
        - name: data2
          persistentVolumeClaim:
            claimName: 'geth-pv-claim'
