kubernetes/imti-geth/430-geth-sealer-ss.yml
apiVersion: v1
kind: Service
metadata:
  # hangileri statefulsetler ile eslestrilmekte kullaniliyor ?
  name: geth
  namespace: geth
  labels:
    app: geth
spec:
  ports:
  - port: 8545
    name: rpc
  clusterIP: None
  selector:
    app: geth
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: geth
  namespace: geth
spec:
  serviceName: "geth"
  replicas: 1 # by default is 1
  selector:
    matchLabels:
      app: geth # has to match .spec.template.metadata.labels
  template:
    metadata:
      labels:
        app: geth # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: geth
        image: ethereum/client-go
        ports:
        - containerPort: 8545
        - name: discovery-udp
          containerPort: 30303
          protocol: UDP
        - name: discovery-tcp
          containerPort: 30303

        args: [
          "--http", 
          "--http.addr", "0.0.0.0", 
          "--http.vhosts", "*", 
          "--http.api", "eth,net,web3,admin,clique", 
          "--http.corsdomain", "*", 
          "--networkid", "$(NETWORK_ID)", 
          "--datadir", "/root/.ethereum/data",
          "--ethstats=$(HOSTNAME):$(ETHSTATS_SECRET)@$(ETHSTATS_SVC)", 
          "--verbosity=6"]
          
      volumes: 
        - name: data
          hostPath:
            path: /root/.ethereum/data # {} denenecek
        - name: config
          hostPath:
            path: /var/geth
        - name: config-genesis
          configMap:
            name: eth-geth
