kubernetes/imti-geth/330-ethstats-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eth-ethstats
  namespace: geth
  labels:
    app: eth-ethstats
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: sysop
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
spec:
  rules:
  - host: ethstats.dcp.dev.d4l.cloud
    http:
      paths:
      - backend:
          serviceName: eth-ethstats
          servicePort: 80
        path: /
